Import font. Fix image stretch and border

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -5,20 +5,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
     .title {
         width: 65%;
         height: 30vh;
         font-size: 2.5em;
-        // overflow: hidden;
         display: flex;
         h1 {
             z-index: 2;
             mix-blend-mode: difference;
         }
-        img {
+        .image {
+            aspect-ratio: 0.6663984375;
             position: relative;
-            height: 3em;
-            width: 3em;
+            $height: 4em;
+            height: $height;
             max-width: 100%;
             float: left;
             margin: 0 -1em;
@@ -26,21 +27,29 @@
             border-radius: 10px;
             z-index: 1;
             filter: grayscale(50%);
-            & ~ span {
-                position: relative;
-                right: 12%;
-                top: -15px;
-                width: 3em;
-                height: 3em;
+            background-image: url('../images/xarri.jpg');
+            background-size: contain;
+            &:before {
+                content: '';
+                position: absolute;
+                aspect-ratio: 0.6663984375;
+                height: $height;
+                left: 5px;
+                top: 5px;
                 border: 2px solid whitesmoke;
                 transform: translate(5px, 5px);
-                border-radius: 10px;
+                border-bottom-right-radius: 15px;
+                z-index: -1;
+                mix-blend-mode: color-burn;
+                border-top: none;
+                border-left: none;
             }
         }
     }
     .details {
         display: grid;
         grid-template-columns: 40% 10% 1fr;
+        grid-auto-flow: dense;
         width: 60%;
         align-items: flex-start;
         text-align: justify;
@@ -71,8 +80,21 @@
         hr {
             position: relative;
             transform-origin: top left;
+            width: 200px;
             transform: rotate(90deg);
             left: 15px;
+        }
+    }
+    @media screen and (max-width: 720px) {
+        hr,
+        .col2 {
+            display: none;
+        }
+
+        .details {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
         }
     }
 }
