--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -15,10 +15,10 @@
     .homeNav {
         margin: 150px 0;
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
         align-items: center;
         text-align: center;
-        width: 60%;
 
         .homeLink {
             position: relative;
@@ -26,6 +26,7 @@
             overflow: hidden;
             letter-spacing: 1px;
             padding: 20px;
+            margin: 0 20px;
             transition: color 0s ease-in-out;
             text-transform: uppercase;
             position: relative;
